--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
   "name": "mk-command",
-  "version": "1.0.163",
+  "version": "1.0.164",
   "description": "mk脚手架",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/whatsmk/mk-command.git"
+  },
+  "bugs": {
+    "url": "https://github.com/whatsmk/mk-command/issues"
+  },
+  "homepage": "https://www.whatsmk.com",
+  "keywords": [
+    "react",
+    "mk",
+    "monkey king",
+    "whatsmk",
+    "whatmk",
+    "mk-js"
+  ],
   "bin": {
     "mk": "./bin/mk-command.js"
   },
@@ -51,7 +67,7 @@
     "webpack": "*",
     "webpack-cli": "*",
     "webpack-dev-server": "*",
-    "which": "^1.3.1"
+    "which": "*"
   },
   "optionalDependencies": {
     "fsevents": "*"
