--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mk-command",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "mk脚手架",
   "license": "MIT",
   "repository": {
@@ -10,7 +10,7 @@
   "bugs": {
     "url": "https://github.com/whatsmk/mk-command/issues"
   },
-  "homepage": "https://www.whatsmk.com",
+  "homepage": "https://github.com/whatsmk/mk-command#readme",
   "keywords": [
     "react",
     "mk",
