--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
-  "name": "mk-command",
-  "version": "1.1.6",
-  "description": "mk脚手架",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/whatsmk/mk-command.git"
+  "_from": "mk-command",
+  "_id": "mk-command@1.1.6",
+  "_inBundle": false,
+  "_integrity": "sha512-Ym8Zdh2iOZ/ZROmyEDZxcGK66KKfZN2hwRHAERHAE0Xl14k15q2qWs5/3BFdqHDCJc122g1XUtbvXytXGn2pNQ==",
+  "_location": "/mk-command",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "tag",
+    "registry": true,
+    "raw": "mk-command",
+    "name": "mk-command",
+    "escapedName": "mk-command",
+    "rawSpec": "",
+    "saveSpec": null,
+    "fetchSpec": "latest"
+  },
+  "_requiredBy": [
+    "#USER",
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/mk-command/-/mk-command-1.1.6.tgz",
+  "_shasum": "0082a0071094f63b0eb24ff67f839a280cca2318",
+  "_spec": "mk-command",
+  "_where": "/home/zlj/my/mk/mk-command",
+  "bin": {
+    "mk": "./bin/mk-command.js"
   },
   "bugs": {
     "url": "https://github.com/whatsmk/mk-command/issues"
   },
-  "homepage": "https://github.com/whatsmk/mk-command#readme",
-  "keywords": [
-    "react",
-    "mk",
-    "monkey king",
-    "whatsmk",
-    "whatmk",
-    "mk-js",
-    "mk-command",
-    "mk-mobile-command"
-  ],
-  "bin": {
-    "mk": "./bin/mk-command.js"
-  },
-  "engines": {
-    "node": ">=6"
-  },
+  "bundleDependencies": false,
   "dependencies": {
     "art-template": "*",
     "babel-core": "*",
@@ -50,6 +53,7 @@
     "envinfo": "*",
     "file-loader": "*",
     "fs-extra": "*",
+    "fsevents": "*",
     "hyperquest": "*",
     "less": "*",
     "less-loader": "*",
@@ -71,7 +75,30 @@
     "webpack-dev-server": "*",
     "which": "*"
   },
+  "deprecated": false,
+  "description": "mk脚手架",
+  "engines": {
+    "node": ">=6"
+  },
+  "homepage": "https://github.com/whatsmk/mk-command#readme",
+  "keywords": [
+    "react",
+    "mk",
+    "monkey king",
+    "whatsmk",
+    "whatmk",
+    "mk-js",
+    "mk-command",
+    "mk-mobile-command"
+  ],
+  "license": "MIT",
+  "name": "mk-command",
   "optionalDependencies": {
     "fsevents": "*"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/whatsmk/mk-command.git"
+  },
+  "version": "1.1.7"
 }
